# fujinet-fw-hal

./: Cargo.toml  README.md  architecture-rules.mdc  build.sh
.cursor/rules/: architecture-rules.mdc
fujinet-common/: Cargo.toml
fujinet-core/: Cargo.toml
fujinet-core/include/: fujinet.h
fujinet-core/src/: error.rs  ffi.rs  lib.rs
fujinet-core/src/device/: mod.rs  network.rs  status.rs
fujinet-core/src/host/: mod.rs
fujinet-core/src/platform/: mod.rs  network.rs
fujinet-core/src/platform/network/: httpclient.rs  mod.rs
fujinet-core/tests/: mod.rs
fujinet-core/tests/mocks/: mod.rs
fujinet-device/: Cargo.toml
fujinet-device/src/: lib.rs
fujinet-device/src/network/: mod.rs  network_device.rs
fujinet-device/src/network/protocols/: http.rs  mod.rs  protocol_handler.rs
fujinet-device/tests/: mock_platform.rs  network_device_test.rs
fujinet-hal/: Cargo.toml
fujinet-hal/include/: fujinet-network.h
fujinet-hal/src/: ffi.rs  lib.rs
fujinet-hal/src/adapters/: mod.rs
fujinet-hal/src/adapters/common/: error.rs  mod.rs  network.rs
fujinet-hal/src/adapters/common/network/: mod.rs  operations.rs  test_mocks.rs
fujinet-hal/src/adapters/common/network/operations/: base.rs  context.rs  http.rs  mod.rs  types.rs
fujinet-hal/src/adapters/ffi/: device.rs  error.rs  mod.rs  network.rs  test_operations.rs
fujinet-hal/src/adapters/ffi/platform/: mod.rs
fujinet-hal/src/adapters/ffi/platform/x86/: mod.rs  network.rs
fujinet-hal/src/device/: device.rs  manager.rs  mod.rs
fujinet-hal/src/device/network/: manager.rs  mod.rs  network_device.rs  url.rs
fujinet-hal/src/device/network/protocols/: client_provider.rs  factory.rs  http.rs  http_client.rs  mod.rs  protocol_handler.rs  protocol_registry.rs  registry.rs
fujinet-hal/src/ffi/: mod.rs
fujinet-hal/src/ffi/platform/x86/: host.rs  mod.rs  network.rs
fujinet-hal/src/host/: host_translator.rs  mod.rs
fujinet-hal/src/host/x86/: host_translator.rs  mod.rs
fujinet-hal/src/platform/: mod.rs  platform.rs
fujinet-hal/src/platform/network/: http_client.rs  mod.rs
fujinet-hal/src/platform/x86/: mod.rs
fujinet-hal/src/platform/x86/network/: client_provider.rs  http_client.rs  manager.rs  mod.rs  protocol_factory.rs
fujinet-hal/tests/: lib.rs  mock_platform.rs  mod.rs
fujinet-hal/tests/adapters/: mod.rs
fujinet-hal/tests/adapters/common/: mod.rs
fujinet-hal/tests/adapters/common/network/: mod.rs  operations_test.rs
fujinet-hal/tests/adapters/ffi/: network_test.rs
fujinet-hal/tests/adapters/ffi/platform/: network_test.rs
fujinet-hal/tests/c/: build.sh  fujinet-hal.h  fujinet-network.c  fujinet-network.h  http_test.c
fujinet-hal/tests/common/: mocks.rs  mod.rs
fujinet-hal/tests/device/network/: manager_test.rs  mod.rs  network_device_test.rs  protocol_factory_device_management_test.rs  protocol_factory_integration_test.rs  protocol_factory_test.rs  protocol_registry_test.rs  protocols_test.rs  url_test.rs
fujinet-hal/tests/device/network/protocols/: http_client_test.rs  http_protocol_test.rs  http_test.rs  mod.rs  protocols_test.rs  test_utils.rs
fujinet-hal/tests/ffi/: mod.rs
fujinet-hal/tests/ffi/platform/: mod.rs  network_test.rs
fujinet-hal/tests/host/: mod.rs
fujinet-hal/tests/host/x86/: host_translator_test.rs  mod.rs
fujinet-hal/tests/mocks/: http.rs
fujinet-hal/tests/platform/: mod.rs
fujinet-hal/tests/platform/x86/network/: client_provider_test.rs  mod.rs
fujinet-host/: Cargo.toml
fujinet-host/src/: host_translator.rs  mod.rs
fujinet-platform/: Cargo.toml
fujinet-platform/src/: lib.rs  platform.rs
fujinet-platform/src/network/: http_client.rs
