[package]
name = "fujinet-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core traits and types for FujiNet HAL"
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
libc = "0.2"
tokio = { workspace = true, features = ["full"] }
