[package]
name = "fujinet-core"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description = "Core FFI layer for FujiNet HAL"
license.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
async-trait = { workspace = true }
fujinet-device = { path = "../fujinet-device" }
fujinet-platform = { path = "../fujinet-platform" }
fujinet-host = { path = "../fujinet-host" }
tokio = { workspace = true, features = ["full"] }
log = { workspace = true }
libc = "0.2"
thiserror = { workspace = true }
