[package]
name = "fujinet-device"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description = "Device implementations for FujiNet HAL"
license.workspace = true

[dependencies]
fujinet-core = { path = "../fujinet-core" }
tokio = { workspace = true }
log = { workspace = true }
async-trait = "0.1.77"