[package]
name = "fujinet-device"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Device abstractions and implementations for FujiNet HAL"
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }