[package]
name = "fujinet-hal"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description = "FujiNet HAL"
license.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
log = { workspace = true }
libc = "0.2"
thiserror = { workspace = true }
reqwest = { version = "0.12.14", features = ["json", "rustls-tls"] }

[dev-dependencies]
faux = "0.1.12"
