[package]
name = "fujinet-host"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Host-specific implementations for FujiNet HAL"
license.workspace = true

[lib]
path = "src/mod.rs"

[dependencies]
async-trait = { workspace = true }
fujinet-device = { path = "../fujinet-device" }
tokio = { workspace = true }
log = { workspace = true }